Cycles Alembic Motion Blur Problem #80076

Closed
opened 2020-08-24 13:15:46 +02:00 by Steffen Dünner · 6 comments

System Information
Operating system: Linux-5.4.0-42-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.51.06

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-24 10:28, hash: cb8da6efce

Short description of error
Motion blur looks totally wrong when rendered with Cycles, when adding a subdivision modifier after the MeshSequenceCache modifier that loads an Alembic:
MB_Problem_Cycles.jpg
Eevee renders the motion blur fine:
MB_Problem_Eevee.jpg
If you delete the subdivision modifier Cycles also renders correct motion blur.

Exact steps for others to reproduce the error

  • Load the attached blend file (don't forget to put the Alembic abc file next to it):
    MB_Problem_v02.blend
    MB_Problem_v02.abc
  • Press F12 to render with Eevee. All is fine.
  • Switch render engine to Cycles.
  • Render again -> result is wrong, no matter if using GPU or CPU.
  • Remove the subdivision modifer.
  • Render again -> result is correct.
**System Information** Operating system: Linux-5.4.0-42-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.51.06 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-24 10:28, hash: `cb8da6efce` **Short description of error** Motion blur looks totally wrong when rendered with Cycles, when adding a subdivision modifier after the MeshSequenceCache modifier that loads an Alembic: ![MB_Problem_Cycles.jpg](https://archive.blender.org/developer/F8808122/MB_Problem_Cycles.jpg) Eevee renders the motion blur fine: ![MB_Problem_Eevee.jpg](https://archive.blender.org/developer/F8808124/MB_Problem_Eevee.jpg) If you delete the subdivision modifier Cycles also renders correct motion blur. **Exact steps for others to reproduce the error** - Load the attached blend file (don't forget to put the Alembic abc file next to it): [MB_Problem_v02.blend](https://archive.blender.org/developer/F8808128/MB_Problem_v02.blend) [MB_Problem_v02.abc](https://archive.blender.org/developer/F8808130/MB_Problem_v02.abc) - Press F12 to render with Eevee. All is fine. - Switch render engine to Cycles. - Render again -> result is wrong, no matter if using GPU or CPU. - Remove the subdivision modifer. - Render again -> result is correct.

Added subscriber: @SteffenD

Added subscriber: @SteffenD

This issue was referenced by 5303509354

This issue was referenced by 530350935472970dccc211b0e728e2db4fd1d8ef

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Kévin Dietrich self-assigned this 2020-08-24 19:39:29 +02:00

Committed fix 5303509354, but this did not get closed automatically for some reason.

Also note that if you have a modifier after the MeshSequenceCache, the custom velocities from the Alembic cache will not be read, and Cycles will default to generating motion blur data based on the vertices of the previous and the next frame, if and only if the vertex count does not change between frames.

Committed fix 5303509354, but this did not get closed automatically for some reason. Also note that if you have a modifier after the MeshSequenceCache, the custom velocities from the Alembic cache will not be read, and Cycles will default to generating motion blur data based on the vertices of the previous and the next frame, if and only if the vertex count does not change between frames.

This comment was removed by @SteffenD

*This comment was removed by @SteffenD*
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80076
No description provided.