intern/cycles/blender/blender_mesh.cpp
@@ -925,17 +925,15 @@ static void create_subd_mesh(Scene *scene,
 
 static BL::MeshSequenceCacheModifier object_mesh_cache_find(BL::Object &b_ob)
 {
-  BL::Object::modifiers_iterator b_mod;
+  if (b_ob.modifiers.length() > 0) {
+    BL::Modifier b_mod = b_ob.modifiers[b_ob.modifiers.length() - 1];
 
-  for (b_ob.modifiers.begin(b_mod); b_mod != b_ob.modifiers.end(); ++b_mod) {
-    if (!b_mod->is_a(&RNA_MeshSequenceCacheModifier)) {
-      continue;
-    }
+    if (b_mod.type() == BL::Modifier::type_MESH_SEQUENCE_CACHE) {
+      BL::MeshSequenceCacheModifier mesh_cache = BL::MeshSequenceCacheModifier(b_mod);
 
-    BL::MeshSequenceCacheModifier mesh_cache = BL::MeshSequenceCacheModifier(*b_mod);
-
-    if (MeshSequenceCacheModifier_has_velocity_get(&mesh_cache.ptr)) {
-      return mesh_cache;
+      if (MeshSequenceCacheModifier_has_velocity_get(&mesh_cache.ptr)) {
+        return mesh_cache;
+      }
     }
   }
 
@@ -953,14 +951,6 @@ static void sync_mesh_cached_velocities(BL::Object &b_ob, Scene *scene, Mesh *me
     return;
   }
 
-  /* Find or add attribute */
-  float3 *P = &mesh->verts[0];
-  Attribute *attr_mP = mesh->attributes.find(ATTR_STD_MOTION_VERTEX_POSITION);
-
-  if (!attr_mP) {
-    attr_mP = mesh->attributes.add(ATTR_STD_MOTION_VERTEX_POSITION);
-  }
-
   if (!MeshSequenceCacheModifier_read_velocity_get(&b_mesh_cache.ptr)) {
     return;
   }
@@ -969,6 +959,14 @@ static void sync_mesh_cached_velocities(BL::Object &b_ob, Scene *scene, Mesh *me
 
   if (b_mesh_cache.vertex_velocities.length() != numverts) {
     return;
+  }
+
+  /* Find or add attribute */
+  float3 *P = &mesh->verts[0];
+  Attribute *attr_mP = mesh->attributes.find(ATTR_STD_MOTION_VERTEX_POSITION);
+
+  if (!attr_mP) {
+    attr_mP = mesh->attributes.add(ATTR_STD_MOTION_VERTEX_POSITION);
   }
 
   /* Only export previous and next frame, we don't have any in between data. */
